# calcapp

./: README.md  main.py  pyproject.toml
docs/: guide-dev.md
src/: __init__.py
src/controllers/: __init__.py
src/models/: __init__.py  derivada.py
src/models/l_hopital/: __init__.py
src/views/: __init__.py
